@@ -1,3 +1,5 @@
+- added i?zip_values()
+
 0.5.6
 - fixed installation issue
 
